--- a/src/web/WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/src/web/WebApp/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,11 @@
-﻿<ul class="navbar-nav">
-    @if (Context.User.Identity.IsAuthenticated)
+﻿@using WebApp.Extensions
+@inject IUser AppUser 
+
+<ul class="navbar-nav">
+    @if (AppUser.IsAuthenticated())
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" title="Manage">Hello User!</a>
+            <a class="nav-link text-dark" title="Manage">Hello @AppUser.GetUserEmail()</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="Auth" asp-action="Logout">Logout</a>
