--- a/src/web/WebApp/Views/Auth/Login.cshtml
+++ b/src/web/WebApp/Views/Auth/Login.cshtml
@@ -10,7 +10,7 @@
             <form method="post">
                 <h4>Login User</h4>
                 <hr />
-
+                <vc:summary></vc:summary>
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" class="form-control" />
