--- a/src/web/WebApp/Views/Auth/Login.cshtml
+++ b/src/web/WebApp/Views/Auth/Login.cshtml
@@ -7,10 +7,12 @@
 <div class="row">
     <div class="col-md-12">
         <section>
-            <form method="post">
+            <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 <h4>Login User</h4>
                 <hr />
+
                 <vc:summary></vc:summary>
+
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" class="form-control" />
